<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/name"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/characterImage"
            android:background="@android:color/black"
            android:padding="8dp"
            android:text="@string/name_placeholder"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <TextView
            android:id="@+id/genderLabelDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/characterImage"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"
            android:padding="8dp"
            android:text="@string/gender_label"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/genderValueDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/genderLabelDetail"
            android:layout_alignLeft="@id/genderLabelDetail"
            android:layout_alignBottom="@+id/genderLabelDetail"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginBottom="0dp"
            android:padding="8dp"
            android:text="@string/gender_value"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/speciesLabelDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/genderValueDetail"
            android:layout_alignBottom="@+id/genderValueDetail"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="0dp"
            android:padding="8dp"
            android:text="@string/species_label"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/speciesValueDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/speciesLabelDetail"
            android:layout_marginStart="-6dp"
            android:layout_marginLeft="-6dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/speciesLabelDetail"
            android:layout_toRightOf="@+id/speciesLabelDetail"
            android:padding="8dp"
            android:text="@string/species_value"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/statusValue"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/speciesLabelDetail"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:padding="8dp"
            android:text="@string/status_value"
            android:textAlignment="textEnd"
            android:textColor="?android:textColorSecondary" />


    </RelativeLayout>
</android.support.v7.widget.CardView>